src/test/ui/consts/const-eval/union-const-eval-field.stderr
error: this constant cannot be used
  --> $DIR/union-const-eval-field.rs:37:5
   |
LL |     const FIELD3: Field3 = unsafe { UNION.field3 }; //~ ERROR cannot be used
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempted to read undefined bytes
   |
   = note: #[deny(const_err)] on by default

error: aborting due to previous error

